--- a/templates/index.html
+++ b/templates/index.html
@@ -1,103 +1,81 @@
 {% load static %}
-{% include 'header.html' %}    
+{% include 'header.html' %}   
+
+
+
+
+
+<section>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        {% for slide in slides %}
+          <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <img class="d-block w-100 h-100 object-fit-cover" src="{{ slide.image.url }}" alt="Slide">
+            <div class="carousel-caption d-none d-md-block text-left caption-bg">
+              <h1>{{ slide.heading_text }}</h1>
+              <p>{{ slide.sub_heading_text }}</p>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <style>
+      .caption-bg {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.5);
+        padding: 10px;
+        width: 100%;
+      }
+      .carousel-item img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+      .carousel-item {
+        height: 700px;
+      }
+      @media (max-width: 768px) {
+        .carousel-item {
+          height: 200px;
+          object-fit: cover;
+        }
+      }
+      
+    </style>
+  </section>
+  
+   
     <section class="banner-style-8">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-12 col-xl-6">
                     <div class="banner-content">
                         <span class="subheading">{{home.mini_title_text}}</span>
-                        <h1>{{home.title_text}}</h1>
-                        <p>{{home.sub_text}}</p>
+                        <h1>{{home.intro_title}}</h1>
+                        <p>{{home.intro_text}}</p>
                         <a href="{{home.button_url}}" class="btn btn-main">{{home.button_text}}</a>  
                     </div>
                 </div>
     
                 <div class="col-xl-6">
                     <div class="banner-img">
-                        <img src="{{home.banner_image.url}}" alt="" class="img-fluid">
+                        <img src="{{home.intro_image.url}}" alt="" class="img-fluid">
                     </div>
                 </div>
-            </div> <!-- / .row -->
-        </div> <!-- / .container -->
-    </section>
+            </div> 
+    </section> 
     
-    <!-- Feature start -->
-    <section class="feature-2  mt--100">
-        <div class="container">
-            <div class="row no-gutters">
-                <div class="col-lg-3 col-md-6">
-                    <div class="feature-item feature-style-2">
-                        <div class="feature-icon">
-                            <i class="bi bi-badge2"></i>
-                        </div>
-                        <div class="feature-text">
-                            <h4>Expert Teacher</h4>
-                            <p>Behind the word mountains, far from the countries</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="feature-item feature-style-2">
-                        <div class="feature-icon">
-                            <i class="bi bi-article"></i>
-                        </div>
-                        <div class="feature-text">
-                            <h4>Quality Education</h4>
-                            <p>Behind the word mountains, far from the countries </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="feature-item feature-style-2">
-                        <div class="feature-icon">
-                            <i class="bi bi-headset"></i>
-                        </div>
-                        <div class="feature-text">
-                            <h4>Life Time Support</h4>
-                            <p>Behind the word mountains, far from the countries</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="feature-item feature-style-2">
-                        <div class="feature-icon">
-                            <i class="bi bi-rocket2"></i>
-                        </div>
-                        <div class="feature-text">
-                            <h4>HD Video</h4>
-                            <p>Behind the word mountains, far from the countries</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="about-section section-padding">
-        <div class="container">
-            <div class="row align-items-center">
-                 <div class="col-lg-6 col-md-12">
-                   <div class="about-img">
-                       <img src="{{home.intro_image.url}}" alt="" class="img-fluid">
-                   </div>
-                </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="section-heading">
-                        <span class="subheading">Introduction</span>
-                        <h3>{{home.intro_title}}</h3>
-                    </div>
-    
-                    <div class="about-content">
-                        <p>{{home.intro_text}}</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>  
-        <!--  Course categories -->
-    
-    <section class="category-section3">
+    <section class="category-section3 mt-5">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-6">
@@ -200,7 +178,7 @@
                     <div class="counter-item">
                         <i class="ti-desktop"></i>
                         <div class="count">
-                            <span class="counter h2">{{home.no_of_students}}</span>
+                            <span class="counter h2">{{data.no_of_students}}</span>
                         </div>
                         <p>Happy Students</p>
                     </div>
@@ -209,7 +187,7 @@
                     <div class="counter-item">
                         <i class="ti-agenda"></i>
                         <div class="count">
-                            <span class="counter h2">{{home.success_rate}}</span>
+                            <span class="counter h2">{{data.success_rate}}</span>
                         </div>
                         <p>success Rate</p>
                     </div>
@@ -219,7 +197,7 @@
                     <div class="counter-item">
                         <i class="ti-heart"></i>
                         <div class="count">
-                            <span class="counter h2">{{home.no_of_teachers}}</span>
+                            <span class="counter h2">{{data.no_of_teachers}}</span>
                         </div>
                         <p>Happy Teachers</p>
                     </div>
@@ -229,7 +207,7 @@
                     <div class="counter-item">
                         <i class="ti-microphone-alt"></i>
                         <div class="count">
-                            <span class="counter h2">{{home.since}}</span>
+                            <span class="counter h2">{{data.since}}</span>
                         </div>
                         <p>Since</p>
                     </div>
