--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,13 +6,25 @@
                 <div class="col-lg-4 mr-auto col-sm-6 col-md-6">
                     <div class="widget footer-widget mb-5 mb-lg-0">
                         <h5 class="widget-title">About Us</h5>
-                        <p class="mt-3">Veniam Sequi molestias aut necessitatibus optio magni at natus accusamus.Lorem ipsum dolor sit amet, consectetur adipisicin gelit, sed do eiusmod tempor incididunt .</p>
+                        <p class="mt-3">With the concept of "Integration through quality education" EBSS was established i the year of 2042 B.S. EBBS has gained a reputation as an academic center of excellence of this region which enables every individual to pursue their education career which complete confidence.</p>
                         <ul class="list-inline footer-socials">
-                            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li class="list-inline-item"> <a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                            {% if data.facebook_url %}
+                            <li class="list-inline-item"><a href="{{ data.facebook_url }}"><i class="fab fa-facebook-f"></i></a></li>
+                            {% endif %}
+                          
+                            {% if data.instagram_url %}
+                            <li class="list-inline-item"><a href="{{ data.instagram_url }}"><i class="fab fa-instagram"></i></a></li>
+                            {% endif %}
+                          
+                            {% if data.linkedin_url %}
+                            <li class="list-inline-item"><a href="{{ data.linkedin_url }}"><i class="fab fa-linkedin"></i></a></li>
+                            {% endif %}
+                          
+                            {% if data.youtube_url %}
+                            <li class="list-inline-item"><a href="{{ data.youtube_url }}"><i class="fab fa-youtube"></i></a></li>
+                            {% endif %}
                         </ul>
+                          
                     </div>
                 </div>
                 
