--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -36,14 +36,8 @@
             </div>
 
             <div class="col-lg-8">
-                <form class="contact__form form-row " method="POST" action="mail.php" id="contactForm">
-                    <div class="row">
-                       <div class="col-12">
-                           <div class="alert alert-success contact__msg" style="display: none" role="alert">
-                               Your message was sent successfully.
-                           </div>
-                       </div>
-                   </div>
+                <form class="form-row " method="POST" action="{% url 'contact_us' %}">
+                    {% csrf_token %}
 
                    <div class="row">
                        <div class="col-lg-6">
@@ -57,9 +51,14 @@
                                <input type="text" name="email" id="email" class="form-control" placeholder="Email Address">
                            </div>
                        </div>
-                       <div class="col-lg-12">
+                       <div class="col-lg-6">
                            <div class="form-group">
                                <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject">
+                           </div>
+                       </div>
+                       <div class="col-lg-6">
+                           <div class="form-group">
+                               <input type="text" name="contact" id="subject" class="form-control" placeholder="Contact">
                            </div>
                        </div>
                        
@@ -78,6 +77,11 @@
                </form> 
             </div>
         </div>
+    </div>
+</section>
+<section class="contact-info section-padding">
+    <div class ="container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.400561456368!2d81.61868687610846!3d28.587757786111514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a285edeb38e515%3A0x497aec74e8d67af7!2sEager%20Bridge%20Secondary%20School!5e0!3m2!1sen!2snp!4v1681655600034!5m2!1sen!2snp" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="1100"></iframe>
     </div>
 </section>
 {% include 'footer.html' %}
