--- a/templates/header.html
+++ b/templates/header.html
@@ -84,6 +84,11 @@
                                 </div>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link dropdown-toggle" href="{% url 'notice' %}">
+                                    Notice and Events
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link dropdown-toggle" href="{% url 'gallery' %}">
                                     Gallery
                                 </a>
