--- a/templates/footer.html
+++ b/templates/footer.html
@@ -45,11 +45,11 @@
                     <div class="footer-widget mb-5 mb-lg-0">
                         <h5 class="widget-title">Quicklinks</h5>
                         <ul class="list-unstyled footer-links">
-                            <li><a href="#">About us</a></li>
                             <li><a href="#">Contact us</a></li>
                             <li><a href="#">Blogs</a></li>
                             <li><a href="#">Mission</a></li>
                             <li><a href="#">Vision</a></li>
+                            <li><a href="{% url 'results' %}">Result</a></li>
                         </ul>
                     </div>
                 </div>
