--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,11 @@
                 <div class="section-heading center-heading">
                     <span class="subheading">Result</span>
                     <h3>Results</h3>
+                    <span class="subheading">
+                        {% if message %}
+                        {{message}}
+                        {% endif %}
+                    </span>
                 </div>
             </div>
         </div>
