--- a/templates/final_result.html
+++ b/templates/final_result.html
@@ -17,22 +17,22 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3">
-                      <strong>Student Name:</strong> {{result.data.student_name}}
+                      <strong>Student Name:</strong> {{result.data.student_details.student_name}}
                     </div>
                     <div class="col-md-4 mb-3">
-                      <strong>Roll No.:</strong> {{result.data.roll_no}}
+                      <strong>Roll No.:</strong> {{result.data.student_details.roll_no}}
                     </div>
                     <div class="col-md-4 mb-3">
-                      <strong>Exam Name:</strong> {{result.data.exam_name}}
+                      <strong>Exam Name:</strong> {{result.data.student_details.exam_name}}
                     </div>
                     <div class="col-md-4 mb-3">
-                      <strong>Level:</strong> {{result.data.level_name}}
+                      <strong>Level:</strong> {{result.data.student_details.level_name}}
                     </div>
                     <div class="col-md-4 mb-3">
-                      <strong>Class:</strong> {{result.data.class_name}}
+                      <strong>Class:</strong> {{result.data.student_details.class_name}}
                     </div>
                     <div class="col-md-4 mb-3">
-                      <strong>Section:</strong> {{result.data.section_name}}
+                      <strong>Section:</strong> {{result.data.student_details.section_name}}
                     </div>
                   </div>
                   
