--- a/templates/final_result.html
+++ b/templates/final_result.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
         </div>
-       
+       {% if result.data %}
         <div class="row align-items-center justify-content-center">
             <div class="container">
                 <div class="row">
@@ -81,6 +81,7 @@
               </table>
               
         </div>
+        {% endif %}
         
     </div>
 </section>
