--- a/templates/select_class.html
+++ b/templates/select_class.html
@@ -17,21 +17,28 @@
        
         <div class="row justify-content-center align-items-center">
 
-            <form class="form " method="POST" action="{% url 'select_exam' %}">
+            <form class="form " method="POST" action="{% url 'select_section' %}">
                 {% csrf_token %}
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="text" name="exam_id"  value="{{exam_id}}" required hidden>
+                </div>
                 <div class="row">
                     <div class="col-12">
-                        <h4>Choose your level</h4>
+                        <h4>Select Class</h4>
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            {% for level in levels %}
-                            
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="level_id" id="option1" value="{{level.level_id}}" required>
-                                <label class="form-check-label" for="option1">{{level.level_name}}</label>
+                            <div class="row">
+                                {% for cls in classes %}
+                                <div class="col-3">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="class_id" id="option{{ cls.class_id }}" value="{{ cls.class_id }}" required>
+                                        <label class="form-check-label" for="option{{ cls.class_id }}">{{ cls.class_name }}</label>
+                                    </div>
+                                </div>
+                                {% endfor %}
                             </div>
-                            {% endfor %}
+                        
                         </div>
                     </div>
                 </div>
