--- a/templates/select_exam.html
+++ b/templates/select_exam.html
@@ -17,19 +17,18 @@
        
         <div class="row justify-content-center align-items-center">
 
-            <form class="form " method="POST" action="{% url 'select_exam' %}">
+            <form class="form " method="POST" action="{% url 'select_class' %}">
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-12">
-                        <h4>Choose your level</h4>
+                        <h4>Select Exam</h4>
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            {% for level in levels %}
-                            
+                            {% for exam in exams %}
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="level_id" id="option1" value="{{level.level_id}}" required>
-                                <label class="form-check-label" for="option1">{{level.level_name}}</label>
+                                <input class="form-check-input" type="radio" name="exam_id" id="option1" value="{{exam.exam_id}}" required>
+                                <label class="form-check-label" for="option1">{{exam.exam_name}}</label>
                             </div>
                             {% endfor %}
                         </div>
