--- a/templates/final_result.html
+++ b/templates/final_result.html
@@ -41,7 +41,7 @@
               <table class="table">
                   <thead>
                     <tr>
-                      <!-- <th >Subject ID</th> -->
+                      <!-- <th >Subject Code</th> -->
                       <th >Subject Code</th>
                       <th >Subject Name</th>
                       <!--<th >Status</th>-->
