--- a/templates/final_result.html
+++ b/templates/final_result.html
@@ -12,15 +12,15 @@
                 </div>
             </div>
         </div>
-       
-        <div class="row align-items-center justify-content-center">
-            <div class="container">
+       {% if result %}
+       <div class="row align-items-center justify-content-center">
+         <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3">
                       <strong>Student Name:</strong> {{result.data.student_details.student_name}}
                     </div>
                     <div class="col-md-4 mb-3">
-                      <strong>Roll No.:</strong> {{result.data.student_details.roll_no}}
+                      <strong>Roll No.:</strong>{{roll_no}}
                     </div>
                     <div class="col-md-4 mb-3">
                       <strong>Exam Name:</strong> {{result.data.student_details.exam_name}}
@@ -85,6 +85,7 @@
                   </tbody>
               </table>
             </div>
+            {% endif %}
               
         </div>
         
