--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,24 @@
 {% load static %}
+
+<style>
+    /* CSS for mobile devices only */
+    @media (max-width: 767px) {
+    .navbar-brand {
+        display: inline-block;
+        margin-right: 10px; 
+        width:300px;
+    }
+    .navbar-brand img{
+        width:300px;
+        height:50px;
+    }
+
+    .navbar-toggler {
+        display: inline-block;
+    }
+    }
+
+</style>
     <!--  Footer Start -->
     <section class="footer pt-120">
         <div class="container">
@@ -89,7 +109,7 @@
                 <div class="row justify-content-center align-items-center">
                     <div class="col-lg-6">
                         <div class="footer-logo">
-                            <img src="{{data.logo.url}}" alt="Edutim" height="85">
+                            <img src="{{data.logo.url}}" alt="Edutim" height="85" width="400">
                         </div>
                     </div>
                     <div class="col-lg-6">
