--- a/templates/select_section.html
+++ b/templates/select_section.html
@@ -45,7 +45,7 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input type="number" id="name" name="roll_no" class="form-control" placeholder="Roll Number">
+                                        <input type="number" id="name" name="roll_no" class="form-control" placeholder="Roll Number" required>
                                     </div>
                                 </div>
                             </div>
